add login controllers and sign-up

--- a/src/views/sign-up.pug
+++ b/src/views/sign-up.pug
@@ -5,15 +5,15 @@ block content
         <form action="/sign-up" method="post">
             <h1 class="text-4xl font-black mb-4">Sign Up</h1>
             <div class="mb-4 relative">
-                <input name="name" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="email" type="text" autofocus>
+                <input name="name" value="Jairo gatjens" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="email" type="text" autofocus>
                 <label for="Name" class="label absolute mb-0 -mt-2 pt-4 pl-3 leading-tighter text-gray-400 text-base mt-2 cursor-text">Nombre</label>
             </div>
             <div class="mb-4 relative">
-                <input name="email" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="email" type="text" autofocus>
+                <input name="email" value="jgatjens@gmail.com" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="email" type="text" autofocus>
                 <label for="email" class="label absolute mb-0 -mt-2 pt-4 pl-3 leading-tighter text-gray-400 text-base mt-2 cursor-text">Email Address</label>
             </div>
             <div class="mb-4 relative">
-                <input name="password" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="password" type="password" autofocus>
+                <input name="password" value="inuyasha22" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="password" type="password" autofocus>
                 <label for="password" class="label absolute mb-0 -mt-2 pt-4 pl-3 leading-tighter text-gray-400 text-base mt-2 cursor-text">Password</label>
             </div>
             <button type="submit" class="bg-indigo-600 hover:bg-blue-dark text-white font-bold py-3 px-6 rounded">Create user</button>
