--- a/src/views/components/alert.pug
+++ b/src/views/components/alert.pug
@@ -1,11 +1,31 @@
 
-.app-notification
-    .shadow-lg.rounded-lg.bg-white.mx-auto.m-8.p-4.notification-box
-        .text-sm.pb-2
-            | Notification 
-            span.float-right
-                svg.fill-current.text-gray-600(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 24 24' width='22' height='22')
-                    path.heroicon-ui(d='M16.24 14.83a1 1 0 0 1-1.41 1.41L12 13.41l-2.83 2.83a1 1 0 0 1-1.41-1.41L10.59 12 7.76 9.17a1 1 0 0 1 1.41-1.41L12 10.59l2.83-2.83a1 1 0 0 1 1.41 1.41L13.41 12l2.83 2.83z')
-        .text-sm.text-gray-600.tracking-tight
-            | I will never close automatically. This is a purposely very very long
-            | description that has many many characters and words.
+//- INFO message
+if messageType == 0
+    .app-notification
+        .shadow-lg.rounded-lg.bg-white.mx-auto.m-8.p-4.notification-box
+            .text-sm.pb-2
+                | Notification 
+                span.float-right
+                    svg.fill-current.text-gray-600(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 24 24' width='22' height='22')
+                        path.heroicon-ui(d='M16.24 14.83a1 1 0 0 1-1.41 1.41L12 13.41l-2.83 2.83a1 1 0 0 1-1.41-1.41L10.59 12 7.76 9.17a1 1 0 0 1 1.41-1.41L12 10.59l2.83-2.83a1 1 0 0 1 1.41 1.41L13.41 12l2.83 2.83z')
+            .text-sm.text-gray-600.tracking-tight
+                | #{message}
+
+if messageType == 1 || messageType == 2
+    .app-notification
+        .shadow-lg.rounded-lg.bg-white.mx-auto.m-8.p-4.notification-box.flex
+            .pr-2
+                if (messageType == 1)
+                    svg.fill-current.text-green-600(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 24 24' width='22' height='22')
+                        path.heroicon-ui(d='M12 22a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-3.54-4.46a1 1 0 0 1 1.42-1.42 3 3 0 0 0 4.24 0 1 1 0 0 1 1.42 1.42 5 5 0 0 1-7.08 0zM9 11a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm6 0a1 1 0 1 1 0-2 1 1 0 0 1 0 2z')
+                else
+                    svg.fill-current.text-red-600(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 24 24' width='22' height='22')
+                        path.heroicon-ui(d='M12 22a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-3.54-4.46a1 1 0 0 1 1.42-1.42 3 3 0 0 0 4.24 0 1 1 0 0 1 1.42 1.42 5 5 0 0 1-7.08 0zM9 11a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm6 0a1 1 0 1 1 0-2 1 1 0 0 1 0 2z')
+            div
+                .text-sm.pb-2
+                    | Success Notification 
+                    span.float-right
+                        svg.fill-current.text-gray-600(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 24 24' width='22' height='22')
+                            path.heroicon-ui(d='M16.24 14.83a1 1 0 0 1-1.41 1.41L12 13.41l-2.83 2.83a1 1 0 0 1-1.41-1.41L10.59 12 7.76 9.17a1 1 0 0 1 1.41-1.41L12 10.59l2.83-2.83a1 1 0 0 1 1.41 1.41L13.41 12l2.83 2.83z')
+                .text-sm.text-gray-600.tracking-tight
+                  | #{message}
