--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -32,10 +32,10 @@ html(lang="en")
                         </svg>
                     </a>
                     | JOTA
-                
+
               </div>   
               <div class="hidden lg:flex items-center justify-center antialiased lg:ml-20 pt-1">
-                <a href="#" class="flex items-center justify-center mr-10 text-base text-gray-700 text-opacity-90 font-medium tracking-tight hover:text-cool-gray-600 transition duration-150 ease-in-out">
+                <a href="/dashboard" class="flex items-center justify-center mr-10 text-base text-gray-700 text-opacity-90 font-medium tracking-tight hover:text-cool-gray-600 transition duration-150 ease-in-out">
                   | Projects
                 </a>
                 <a href="#" class="flex items-center justify-center mr-10 text-base text-gray-700 text-opacity-90 font-medium tracking-tight hover:text-cool-gray-600 transition duration-150 ease-in-out">
@@ -44,8 +44,12 @@ html(lang="en")
               </div>
             </div>
             <div class="hidden md:flex items-center justify-center">
-              <a href="/login" class="mr-5 text-lg font-medium text-true-gray-800 hover:text-cool-gray-700 transition duration-150 ease-in-out">Login</a>
-              <a href="/sign-up" class="px-6 py-3 rounded-3xl font-medium bg-gradient-to-b from-gray-900 to-black text-white outline-none focus:outline-none hover:shadow-md hover:from-true-gray-900 transition duration-200 ease-in-out">Sign Up</a>
+              if !name
+                <a href="/login" class="mr-5 text-lg font-medium text-true-gray-800 hover:text-cool-gray-700 transition duration-150 ease-in-out">Login</a>
+                <a href="/sign-up" class="px-6 py-3 rounded-3xl font-medium bg-gradient-to-b from-gray-900 to-black text-white outline-none focus:outline-none hover:shadow-md hover:from-true-gray-900 transition duration-200 ease-in-out">Sign Up</a>
+              else
+                <a href="/logout" class="mr-5 text-lg font-medium text-true-gray-800 hover:text-cool-gray-700 transition duration-150 ease-in-out">Logout</a>
+              
             </div>
           </div>
           <!-- /nav -->
@@ -69,5 +73,4 @@ html(lang="en")
     </div>
   </div>
 
-  
   include components/alert.pug
