--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -3,15 +3,17 @@ extends layout.pug
 block content
     <div class="mt-20 text-left lg:2/6 xl:w-2/5 lg:mt-40 lg:ml-16">
         <h1 class="text-4xl font-black mb-4">Login</h1>
-        <div class="mb-4 relative">
-            <input class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="email" type="text" autofocus>
-            <label for="email" class="label absolute mb-0 -mt-2 pt-4 pl-3 leading-tighter text-gray-400 text-base mt-2 cursor-text">Email Address</label>
-        </div>
-        <div class="mb-4 relative">
-            <input class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="password" type="password" autofocus>
-            <label for="password" class="label absolute mb-0 -mt-2 pt-4 pl-3 leading-tighter text-gray-400 text-base mt-2 cursor-text">Password</label>
-        </div>
-        <button class="bg-indigo-600 hover:bg-blue-dark text-white font-bold py-3 px-6 rounded">Submit</button>
+        <form action="/login" method="post">
+            <div class="mb-4 relative">
+                <input name="email" value="jgatjens@gmail.com" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="email" type="text" autofocus>
+                <label for="email" class="label absolute mb-0 -mt-2 pt-4 pl-3 leading-tighter text-gray-400 text-base mt-2 cursor-text">Email Address</label>
+            </div>
+            <div class="mb-4 relative">
+                <input name="password" value="inuyasha22" class="input border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="password" type="password" autofocus>
+                <label for="password" class="label absolute mb-0 -mt-2 pt-4 pl-3 leading-tighter text-gray-400 text-base mt-2 cursor-text">Password</label>
+            </div>
+            <button class="bg-indigo-600 hover:bg-blue-dark text-white font-bold py-3 px-6 rounded">Submit</button>
+        </form>
     </div>
     script(src='/js/input.js')
         
